# rs-gandi-dns-dynip

./: Cargo.toml  LICENSE  README.md
src/: gandi.rs  main.rs  settings.rs
