[package]
authors = ["Nicolas Olivier <nicolas@kingtong.org>"]
categories = ["command-line-utilities"]
description = "Little tool to set an `A` record on a domain registered with Gandi."
documentation = "https://github.com/kingtong/rs-gandi-dns-dynip/blob/master/README.md"
readme = "README.md"
homepage = "https://github.com/kingtong/rs-gandi-dns-dynip"
repository = "https://github.com/kingtong/rs-gandi-dns-dynip"
name = "rs-gandi-dns-dynip"
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version  = "3.0", features = ["derive"] }
isahc = { version = "1.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
